...
  "groupCommunity": "Społeczność",
  "@groupCommunity": {},
  "groupInfo": "Informacje",
  "@groupInfo": {},
  "groupLinks": "Linki",
  "@groupLinks": {},
  "rowLanguage": "Język",
  "@rowLanguage": {},
  "rowSuggestPlace": "Zaproponuj miejsce",
  "@rowSuggestPlace": {},
  "rowSuggestPlaceSub": "Otwórz formularz — pomóż rozwijać mapę halal",
  "@rowSuggestPlaceSub": {},
  "rowAbout": "O aplikacji",
...
